syntax = "proto3";

package account;

option java_package = "com.account.pocbankgrpc";
option java_multiple_files = true;

service AccountService {
  rpc GetBalance(BalanceRequest) returns (BalanceResponse);
  rpc Debit(DebitRequest) returns (TransactionResponse);
  rpc Credit(CreditRequest) returns (TransactionResponse);
}

message BalanceRequest {
  string accountId = 1;
}

message BalanceResponse {
  double balance = 1;
}

message DebitRequest {
  string accountId = 1;
  double amount = 2;
}

message CreditRequest {
  string accountId = 1;
  double amount = 2;
}

message TransactionResponse {
  bool success = 1;
  string message = 2;
}
